Feature: Added typing animation and updated education with diploma details

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Shaik Abdul Raheem | Data Engineer Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
   <section class="home" id="home">
     <div class="home-content">
       <h1>Hi, I'm <span>Shaik Abdul Raheem</span></h1>
-      <h3 class="text-animate">Data Engineer | Cloud Engineer | Big Data Engineer</h3>
+      <h3 class="text-animate"><span class="typed-text"></span></h3>
       <p>Passionate about data pipelines, Azure cloud, and performance optimization. I specialize in building and managing data infrastructure that powers analytics and business decisions.</p>
       <div class="btn-box">
         <a href="data/Abdul_Raheem_Wipro_Data_Engineer.pdf" class="btn" target="_blank">Download Resume</a>
@@ -48,13 +49,22 @@
     <h2 class="heading">My <span>Education</span></h2>
     <div class="education-content">
       <div class="box">
-        <h3>B.Tech - Computer Science Engineering</h3>
-        <p>Focused on data structures, database management, and distributed computing.</p>
+        <h3>B.Tech - Electrical and Electronics Engineering (July 2018 - Aug 2021)</h3>
+        <p>Studied core subjects such as electrical machines, power systems, control systems, and electronics. 
+        Gained practical knowledge in circuit design, microcontrollers, and power distribution, 
+        with a strong foundation in analytical problem-solving and engineering principles.</p>
       </div>
+
+      <div class="box">
+        <h3>Diploma - Electrical and Electronics Engineering (July 2015 - Apr 2018)</h3>
+        <p>Acquired hands-on experience in electrical circuits, control panels, and instrumentation. 
+        Built a strong technical understanding of electrical systems and troubleshooting techniques.</p>
+      </div>
+
       <div class="box">
         <h3>Certifications</h3>
         <ul>
-          <li>Microsoft Azure Data Engineer Associate</li>
+          <li>Microsoft Azure Fundamentals</li>
           <li>Databricks Certified Data Engineer</li>
           <li>Snowflake Data Warehouse Fundamentals</li>
         </ul>
@@ -79,11 +89,19 @@
   <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me</span></h2>
     <div class="contact-info">
-      <p><i class='bx bx-envelope'></i> abdulraheem48@gmail.com</p>
+      <p><i class='bx bx-phone'></i> +91 6303726373</p>
       <p><i class='bx bx-map'></i> Hyderabad, India</p>
+
       <div class="socials">
-        <a href="https://www.linkedin.com/in/shaik-abdul-raheem-950256176" target="_blank"><i class='bx bxl-linkedin'></i></a>
-        <a href="https://github.com/abdulraheem48" target="_blank"><i class='bx bxl-github'></i></a>
+        <a href="mailto:abdulraheeem687@gmail.com" target="_blank" title="Send me an email">
+          <i class='bx bxl-gmail'></i>
+        </a>
+        <a href="https://www.linkedin.com/in/shaik-abdul-raheem-950256176" target="_blank">
+          <i class='bx bxl-linkedin'></i>
+        </a>
+        <a href="https://github.com/abdulraheem48" target="_blank">
+          <i class='bx bxl-github'></i>
+        </a>
       </div>
     </div>
   </section>
