Update: added Certification separator in menu and clickable certification links

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
       <a href="#education">Education</a>
+      <a href="#certifications">Certifications</a>
       <a href="#skills">Skills</a>
       <a href="#contact">Contact</a>
     </nav>
@@ -60,13 +61,20 @@
         <p>Acquired hands-on experience in electrical circuits, control panels, and instrumentation. 
         Built a strong technical understanding of electrical systems and troubleshooting techniques.</p>
       </div>
+    </div>
+  </section>
 
+  <!-- Certifications Section -->
+  <section class="certifications" id="certifications">
+    <h2 class="heading">My <span>Certifications</span></h2>
+    <div class="education-content">
       <div class="box">
-        <h3>Certifications</h3>
         <ul>
-          <li>Microsoft Azure Fundamentals</li>
-          <li>Databricks Certified Data Engineer</li>
-          <li>Snowflake Data Warehouse Fundamentals</li>
+          <li><a href="https://www.dropbox.com/scl/fi/1bfpx7myap8x0a10e1dif/AZ-900.pdf?rlkey=nalv0u2fu2yh7vzpblld8lmql&st=t8eegvz2&dl=0" target="_blank">Microsoft Azure Fundamentals</a></li>
+          <li><a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383101362_certificate.pdf" target="_blank">Databricks Certified Associate Developer for Apache Spark 3.0</a></li>
+          <li><a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383181623_AWS%20Certified%20Cloud%20Practitioner%20certificate.pdf" target="_blank">AWS Certified Cloud Practitioner</a></li>
+          <li><a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383219940_AWS%20Certified%20Solutions%20Architect%20-%20Associate%20certificate.pdf" target="_blank">AWS Certified Solutions Architect - Associate</a></li>
+          <li><a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383262419_SnowPro%20Core_S0027861.pdf" target="_blank">SnowPro Core</a></li>
         </ul>
       </div>
     </div>
