Docs: Added detailed line-by-line comments in CSS and JS

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shaik Abdul Raheem | Data Engineer Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <meta charset="UTF-8" /> <!-- Sets character encoding to UTF-8 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- Ensures mobile responsiveness -->
+  <title>Shaik Abdul Raheem | Data Engineer Portfolio</title> <!-- Page title -->
+  <link rel="stylesheet" href="style.css" /> <!-- Links external CSS -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> <!-- Icons library -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script> <!-- Typed.js for typing animation -->
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <div class="home-content">
       <h1>Hi, I'm <span>Shaik Abdul Raheem</span></h1>
       <h3 class="text-animate"><span class="typed-text"></span></h3>
-      <p>Passionate about data pipelines, Azure cloud, and performance optimization. I specialize in building and managing data infrastructure that powers analytics and business decisions.</p>
+      <p>Passionate about data pipelines, Azure cloud, and performance optimization.</p>
       <div class="btn-box">
         <a href="data/Abdul_Raheem_Wipro_Data_Engineer.pdf" class="btn" target="_blank">Download Resume</a>
         <a href="#contact" class="btn">Let's Talk</a>
@@ -39,48 +39,45 @@
     </div>
   </section>
 
-  <!-- About Section -->
+  <!-- About -->
   <section class="about" id="about">
     <h2 class="heading">About <span>Me</span></h2>
-    <p>I'm a Data Engineer with hands-on experience in Azure, Databricks, and Big Data ecosystems. My goal is to design robust, scalable data solutions and contribute to impactful data-driven projects.</p>
+    <p>I'm a Data Engineer with hands-on experience in Azure, Databricks, and Big Data ecosystems.</p>
   </section>
 
-  <!-- Education Section -->
+  <!-- Education -->
   <section class="education" id="education">
     <h2 class="heading">My <span>Education</span></h2>
     <div class="education-content">
       <div class="box">
-        <h3>B.Tech - Electrical and Electronics Engineering (July 2018 - Aug 2021)</h3>
-        <p>Studied core subjects such as electrical machines, power systems, control systems, and electronics. 
-        Gained practical knowledge in circuit design, microcontrollers, and power distribution, 
-        with a strong foundation in analytical problem-solving and engineering principles.</p>
+        <h3>B.Tech - Electrical and Electronics Engineering (2018 - 2021)</h3>
+        <p>Studied core EEE subjects and developed strong analytical problem-solving skills.</p>
       </div>
 
       <div class="box">
-        <h3>Diploma - Electrical and Electronics Engineering (July 2015 - Apr 2018)</h3>
-        <p>Acquired hands-on experience in electrical circuits, control panels, and instrumentation. 
-        Built a strong technical understanding of electrical systems and troubleshooting techniques.</p>
+        <h3>Diploma - Electrical and Electronics Engineering (2015 - 2018)</h3>
+        <p>Hands-on experience in circuits, control panels, and instrumentation.</p>
       </div>
     </div>
   </section>
 
-  <!-- Certifications Section -->
+  <!-- Certifications -->
   <section class="education" id="certifications">
     <h2 class="heading">My <span>Certifications</span></h2>
     <div class="education-content">
       <div class="box">
         <ul>
           <li><a href="https://www.dropbox.com/scl/fi/1bfpx7myap8x0a10e1dif/AZ-900.pdf?rlkey=nalv0u2fu2yh7vzpblld8lmql&st=t8eegvz2&dl=0" target="_blank">Microsoft Azure Fundamentals</a></li>
-          <li><a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383101362_certificate.pdf" target="_blank">Databricks Certified Associate Developer for Apache Spark 3.0</a></li>
+          <li><a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383101362_certificate.pdf" target="_blank">Databricks Certified Associate Developer</a></li>
           <li><a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383181623_AWS%20Certified%20Cloud%20Practitioner%20certificate.pdf" target="_blank">AWS Certified Cloud Practitioner</a></li>
-          <li><a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383219940_AWS%20Certified%20Solutions%20Architect%20-%20Associate%20certificate.pdf" target="_blank">AWS Certified Solutions Architect - Associate</a></li>
+          <li><a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383219940_AWS%20Certified%20Solutions%20Architect%20-%20Associate%20certificate.pdf" target="_blank">AWS Solutions Architect - Associate</a></li>
           <li><a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383262419_SnowPro%20Core_S0027861.pdf" target="_blank">SnowPro Core</a></li>
         </ul>
       </div>
     </div>
   </section>
 
-  <!-- Skills Section -->
+  <!-- Skills -->
   <section class="skills" id="skills">
     <h2 class="heading">Technical <span>Skills</span></h2>
     <div class="skills-box">
@@ -93,7 +90,7 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
+  <!-- Contact -->
   <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me</span></h2>
     <div class="contact-info">
