Docs: Added detailed line-by-line comments in CSS and JS

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         <a href="mailto:abdulraheeem687@gmail.com" target="_blank" title="Send me an email">
           <i class='bx bxl-gmail'></i>
         </a>
-        <a href="https://www.linkedin.com/in/shaik-abdul-raheem-950256176" target="_blank">
+        <a href="https://www.linkedin.com/in/shaik-abdul-raheem-950256176">
           <i class='bx bxl-linkedin'></i>
         </a>
-        <a href="https://github.com/abdulraheem48" target="_blank">
+        <a href="https://github.com/abdulraheem48">
           <i class='bx bxl-github'></i>
         </a>
       </div>
