Enhanced certification date colors with soft cyan text, gold highlights, and glowing hover effect

--- a/index.html
+++ b/index.html
@@ -329,44 +329,56 @@
 <!-- ===== CERTIFICATIONS SECTION ===== -->
 <section class="education" id="certifications">
   <h2 class="heading">My <span>Certifications</span></h2>
+  <p class="note">
+    ✨ <span>Click anywhere on the certificate</span> <i class="fas fa-arrow-pointer"></i> to preview it in a new tab
+  </p>
 
   <div class="cert-container">
-    <div class="cert-card">
+
+    <!-- Azure Fundamentals -->
+    <a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1762173427093_AZ-900.pdf"
+       target="_blank" class="cert-card">
       <img src="data/az-900.png" alt="Azure Fundamentals">
-      <a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1762173427093_AZ-900.pdf" target="_blank">
-        Microsoft Azure Fundamentals - AZ-900
-      </a>
-    </div>
+      <p>Microsoft Azure Fundamentals - AZ-900</p> <br>
+      <small>Date Earned: <span>December 8, 2024</span></small>
+    </a>
 
-    <div class="cert-card">
+    <!-- Databricks Spark Developer -->
+    <a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383101362_certificate.pdf"
+       target="_blank" class="cert-card">
       <img src="data/databrics_sda.png" alt="Databricks Spark Developer">
-      <a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383101362_certificate.pdf" target="_blank">
-        Databricks Certified Associate Developer for Apache Spark 3.0
-      </a>
-    </div>
+      <p>Databricks Certified Associate Developer for Apache Spark 3.O</p> <br>
+      <small>Date Earned: <span>August 30, 2024</span></small>
+    </a>
 
-    <div class="cert-card">
+    <!-- AWS Cloud Practitioner -->
+    <a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383181623_AWS%20Certified%20Cloud%20Practitioner%20certificate.pdf"
+       target="_blank" class="cert-card">
       <img src="data/aws_ccp.png" alt="AWS CCP">
-      <a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383181623_AWS%20Certified%20Cloud%20Practitioner%20certificate.pdf" target="_blank">
-        AWS Certified Cloud Practitioner
-      </a>
-    </div>
+      <p>AWS Certified Cloud Practitioner</p> <br> 
+      <small>Issue Date: <span>July 24, 2023</span>  Expiration: <span>July 24, 2026</span></small>
+    </a>
 
-    <div class="cert-card">
+    <!-- AWS Solutions Architect – Associate -->
+    <a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383219940_AWS%20Certified%20Solutions%20Architect%20-%20Associate%20certificate.pdf"
+       target="_blank" class="cert-card">
       <img src="data/aws_saa.png" alt="AWS SAA">
-      <a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383219940_AWS%20Certified%20Solutions%20Architect%20-%20Associate%20certificate.pdf" target="_blank">
-        AWS Solutions Architect – Associate
-      </a>
-    </div>
+      <p>AWS Solutions Architect – Associate</p> <br>
+      <small>Issue Date: <span>December 4, 2024</span>  Expiration: <span>December 4, 2027</span></small>
+    </a>
 
-    <div class="cert-card">
+    <!-- SnowPro Core -->
+    <a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383262419_SnowPro%20Core_S0027861.pdf"
+       target="_blank" class="cert-card">
       <img src="data/snowpro.png" alt="SnowPro Core">
-      <a href="https://storage.googleapis.com/bosscoderplatformindia.appspot.com/resume_upload_certificate/USER_ID/1760383262419_SnowPro%20Core_S0027861.pdf" target="_blank">
-        SnowPro Core Certification
-      </a>
-    </div>
+      <p>SnowPro Core Certification</p> <br>
+      <small>Issue Date: <span>February 29, 2024</span>  Expiration: <span>February 28, 2026</span></small>
+    </a>
+
   </div>
 </section>
+
+
 
 
   <!-- ===== EDUCATION SECTION ===== -->
